# engcsbot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  autodeploy.sh
src/: main.rs
src/commands/: announce.rs  cancelday.rs  forceannounce.rs  info.rs  jsonembed.rs  mod.rs  removemeeting.rs  schedule.rs  setnote.rs  shutdown.rs  upcoming.rs  util.rs
src/data/: mod.rs  saveutil.rs  scheduled_meeting.rs
src/periodic/: announcements.rs  mod.rs  reset_state.rs  status_manager.rs
