[package]
name = "engcsbot"
version = "0.9.0"
edition = "2024"
authors = ["revurb"]

[dependencies]
chrono = "0.4.43"
serde_json = "1.0.149"
serenity = { version = "0.12.5", features = ["utils", "collector"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "io-std"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }